--- a/Lab/02/C++/C++.vcxproj.filters
+++ b/Lab/02/C++/C++.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="WebHook.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Dialogs.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
